--- a/.theos/_/DEBIAN/control
+++ b/.theos/_/DEBIAN/control
@@ -6,5 +6,5 @@ Maintainer: Wes <wes.hamster@gmail.com>
 Author: Wes <wes.hamster@gmail.com>
 Section: Tweaks
 Depends: mobilesubstrate (>= 0.9.5000), ws.hbang.common (>= 1.2), net.limneos.libbulletin
-Version: 0.0.1-84+debug
+Version: 1.0.0
 Installed-Size: 520
