Added option to specify which apps to use

--- a/control
+++ b/control
@@ -1,9 +1,9 @@
 Package: com.wrp1002.notiflives
 Name: NotifLives
-Version: 1.1.0
+Version: 1.1.1
 Architecture: iphoneos-arm
 Description: Get 1UPs from notifications!
 Maintainer: Wes <wes.hamster@gmail.com>
 Author: Wes <wes.hamster@gmail.com>
 Section: Tweaks
-Depends: mobilesubstrate (>= 0.9.5000), ws.hbang.common (>= 1.2), net.limneos.libbulletin
+Depends: mobilesubstrate (>= 0.9.5000), preferenceloader, ws.hbang.common (>= 1.2), net.limneos.libbulletin, com.spark.libsparkapplist
