--- a/.theos/_/DEBIAN/control
+++ b/.theos/_/DEBIAN/control
@@ -5,6 +5,6 @@ Description: Get 1UPs from notifications!
 Maintainer: Wes <wes.hamster@gmail.com>
 Author: Wes <wes.hamster@gmail.com>
 Section: Tweaks
-Depends: mobilesubstrate (>= 0.9.5000), ws.hbang.common (>= 1.2), net.limneos.libbulletin
-Version: 1.1.0
-Installed-Size: 580
+Depends: mobilesubstrate (>= 0.9.5000), preferenceloader, ws.hbang.common (>= 1.2), net.limneos.libbulletin, com.spark.libsparkapplist
+Version: 1.1.1
+Installed-Size: 460
