--- a/.theos/_/DEBIAN/control
+++ b/.theos/_/DEBIAN/control
@@ -1,10 +1,10 @@
 Package: com.wrp1002.notiflives
 Name: NotifLives
-Architecture: iphoneos-arm
 Description: Get 1UPs from notifications!
 Maintainer: Wes <wes.hamster@gmail.com>
 Author: Wes <wes.hamster@gmail.com>
 Section: Tweaks
-Depends: mobilesubstrate (>= 0.9.5000), preferenceloader, ws.hbang.common (>= 1.2), net.limneos.libbulletin, com.spark.libsparkapplist
-Version: 1.1.1
-Installed-Size: 464
+Depends: mobilesubstrate (>= 0.9.5000), preferenceloader, ws.hbang.common (>= 1.2), net.limneos.libbulletin, com.opa334.altlist
+Architecture: iphoneos-arm64
+Version: 1.1.2
+Installed-Size: 1624
