update for rootless, include some default sounds

--- a/notiflivesprefs/Makefile
+++ b/notiflivesprefs/Makefile
@@ -1,8 +1,15 @@
-TARGET := iphone:clang:latest:7.0
+#THEOS_PACKAGE_SCHEME=rootless
 
 include $(THEOS)/makefiles/common.mk
 
-ARCHS = arm64 arm64e
+ifeq ($(THEOS_PACKAGE_SCHEME),rootless)
+	ARCHS = arm64 arm64e
+	TARGET = iphone:clang:15.6:15.0
+else
+	ARCHS = armv7 armv7s arm64 arm64e
+	TARGET = iphone:clang:14.2:8.0
+endif
+
 SDKVERSION = 13.3
 
 BUNDLE_NAME = NotifLivesPrefs
@@ -12,7 +19,6 @@ $(BUNDLE_NAME)_FRAMEWORKS = UIKit
 $(BUNDLE_NAME)_PRIVATE_FRAMEWORKS = Preferences
 $(BUNDLE_NAME)_INSTALL_PATH = /Library/PreferenceBundles
 $(BUNDLE_NAME)_CFLAGS = -fobjc-arc
-$(BUNDLE_NAME)_EXTRA_FRAMEWORKS = Cephei CepheiPrefs
-$(BUNDLE_NAME)_LIBRARIES = sparkapplist
+$(BUNDLE_NAME)_EXTRA_FRAMEWORKS = Cephei CepheiPrefs AltList
 
 include $(THEOS_MAKE_PATH)/bundle.mk
