--- a/notiflivesprefs/Makefile
+++ b/notiflivesprefs/Makefile
@@ -19,6 +19,6 @@ $(BUNDLE_NAME)_FRAMEWORKS = UIKit
 $(BUNDLE_NAME)_PRIVATE_FRAMEWORKS = Preferences
 $(BUNDLE_NAME)_INSTALL_PATH = /Library/PreferenceBundles
 $(BUNDLE_NAME)_CFLAGS = -fobjc-arc
-$(BUNDLE_NAME)_EXTRA_FRAMEWORKS = Cephei CepheiPrefs AltList
+$(BUNDLE_NAME)_EXTRA_FRAMEWORKS = Cephei CepheiPrefs #AltList
 
 include $(THEOS_MAKE_PATH)/bundle.mk
