--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,9 +25,9 @@ jobs:
           path: theos
 
       - name: Checkout SDKs (16.5)
-        uses: actions/checkout@main
+        uses: actions/checkout@master
         with:
-          repository: xybp888/iOS-SDKs
+          repository: theos/sdks
           ref: master
           sparse-checkout: iPhoneOS16.5.sdk
           path: theos/sdks
@@ -46,14 +46,6 @@ jobs:
           repository: xybp888/iOS-SDKs
           ref: master
           sparse-checkout: iPhoneOS14.5.sdk
-          path: theos/sdks
-
-      - name: Checkout SDKs (13.0)
-        uses: actions/checkout@main
-        with:
-          repository: xybp888/iOS-SDKs
-          ref: master
-          sparse-checkout: iPhoneOS13.0.sdk
           path: theos/sdks
 
       - name: Install dependencies
