--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,12 +24,14 @@ jobs:
           submodules: recursive
           path: theos
 
-      - name: Checkout SDKs (16.5)
+      - name: Checkout SDKs
         uses: actions/checkout@main
         with:
           repository: theos/sdks
           ref: master
-          sparse-checkout: iPhoneOS16.5.sdk
+          sparse-checkout: |
+            iPhoneOS15.6.sdk
+            iPhoneOS16.5.sdk
           path: theos/sdks
 
       - name: Install dependencies
