--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -100,7 +100,7 @@ jobs:
 
       - name: Install AltList
         working-directory: altlist
-        run: make clean && make FINALPACKAGE=1 THEOS_PACKAGE_SCHEME=rootless && mkdir -p "$THEOS/lib/iphone/rootless/lib" && cp -Rv "./.theos/obj/AltList.framework" "$THEOS/lib/iphone/rootless"
+        run: make clean && make FINALPACKAGE=1 && cp -Rv "./.theos/obj/AltList.framework" "$THEOS/lib"
 
       - name: Checkout SDKs
         uses: actions/checkout@main
