--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,11 +27,9 @@ jobs:
       - name: Checkout SDKs
         uses: actions/checkout@main
         with:
-          repository: theos/sdks
+          repository: xybp888/iOS-SDKs
           ref: master
-          sparse-checkout: |
-            iPhoneOS15.6.sdk
-            iPhoneOS16.5.sdk
+          sparse-checkout: iPhoneOS15.5.sdk
           path: theos/sdks
 
       - name: Install dependencies
@@ -40,16 +38,15 @@ jobs:
       - name: Set THEOS environment variable
         run: echo "THEOS=$GITHUB_WORKSPACE/theos" >> $GITHUB_ENV
 
-      - name: Checkout AltList
+      - name: Checkout libSparkAppList
         uses: actions/checkout@main
         with:
-          repository: opa334/AltList
-          ref: main
-          path: altlist
+          repository: SparkDev97/libSparkAppList
+          ref: master
+          sparse-checkout: iPhoneOS15.5.sdk
 
-      - name: Install AltList
-        working-directory: altlist
-        run: make clean && make FINALPACKAGE=1 THEOS_PACKAGE_SCHEME=rootless && mkdir -p "$THEOS/lib/iphone/rootless/lib" && cp -Rv "./.theos/obj/AltList.framework" "$THEOS/lib/iphone/rootless"
+      - name: Install libSparkAppList
+        run: cp lib/* $THEOS/lib && cp headers/* $THEOS/include
 
       - name: Build package (rootless)
         run: THEOS=theos gmake clean package FINALPACKAGE=1 THEOS_PACKAGE_SCHEME=rootless
@@ -77,31 +74,6 @@ jobs:
           submodules: recursive
           path: theos
 
-      - name: Install dependencies
-        run: brew install make xz ldid
-
-      - name: Checkout SDKs
-        uses: actions/checkout@main
-        with:
-          repository: theos/sdks
-          ref: master
-          sparse-checkout: iPhoneOS14.5.sdk
-          path: theos/sdks
-
-      - name: Set THEOS environment variable
-        run: echo "THEOS=$GITHUB_WORKSPACE/theos" >> $GITHUB_ENV
-
-      - name: Checkout AltList
-        uses: actions/checkout@main
-        with:
-          repository: opa334/AltList
-          ref: main
-          path: altlist
-
-      - name: Install AltList
-        working-directory: altlist
-        run: make clean && make FINALPACKAGE=1 && cp -Rv "./.theos/obj/AltList.framework" "$THEOS/lib"
-
       - name: Checkout SDKs
         uses: actions/checkout@main
         with:
@@ -109,6 +81,22 @@ jobs:
           ref: master
           sparse-checkout: iPhoneOS14.2.sdk
           path: theos/sdks
+
+      - name: Install dependencies
+        run: brew install make xz ldid
+
+      - name: Set THEOS environment variable
+        run: echo "THEOS=$GITHUB_WORKSPACE/theos" >> $GITHUB_ENV
+
+      - name: Checkout libSparkAppList
+        uses: actions/checkout@main
+        with:
+          repository: SparkDev97/libSparkAppList
+          ref: master
+          sparse-checkout: iPhoneOS15.5.sdk
+
+      - name: Install libSparkAppList
+        run: cp lib/* $THEOS/lib && cp headers/* $THEOS/include
 
       - name: Build package (rootful)
         run: THEOS=theos gmake clean package FINALPACKAGE=1
@@ -118,4 +106,3 @@ jobs:
         with:
           name: packages iphoneos-arm (rootful)
           path: packages/*_iphoneos-arm.deb
-
