--- a/notiflivesprefs/Makefile
+++ b/notiflivesprefs/Makefile
@@ -1,10 +1,10 @@
-#THEOS_PACKAGE_SCHEME=rootless
+THEOS_PACKAGE_SCHEME=rootless
 
 include $(THEOS)/makefiles/common.mk
 
 ifeq ($(THEOS_PACKAGE_SCHEME),rootless)
 	ARCHS = arm64 arm64e
-	TARGET = iphone:clang:15.6:15.0
+	TARGET = iphone:clang:15.5:15.0
 else
 	ARCHS = armv7 armv7s arm64 arm64e
 	TARGET = iphone:clang:14.2:8.0
@@ -19,6 +19,7 @@ $(BUNDLE_NAME)_FRAMEWORKS = UIKit
 $(BUNDLE_NAME)_PRIVATE_FRAMEWORKS = Preferences
 $(BUNDLE_NAME)_INSTALL_PATH = /Library/PreferenceBundles
 $(BUNDLE_NAME)_CFLAGS = -fobjc-arc
-$(BUNDLE_NAME)_EXTRA_FRAMEWORKS = Cephei CepheiPrefs AltList
+$(BUNDLE_NAME)_EXTRA_FRAMEWORKS = Cephei CepheiPrefs
+$(BUNDLE_NAME)_LIBRARIES = sparkapplist
 
 include $(THEOS_MAKE_PATH)/bundle.mk
