--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,13 +46,13 @@ jobs:
         with:
           repository: SparkDev97/libSparkAppList
           ref: master
+          path: libSparkAppList
 
       - name: Install libSparkAppList
+        working-directory: libSparkAppList
         run: |
-          mkdir $THEOS/lib
-          cp ./lib/* $THEOS/lib
-          mkdir $THEOS/include
-          cp ./headers/* $THEOS/include
+          cp "./lib/*" "$THEOS/lib"
+          cp "./headers/*" "$THEOS/include"
 
       - name: Build package (rootless)
         run: THEOS=theos gmake clean package FINALPACKAGE=1 THEOS_PACKAGE_SCHEME=rootless
@@ -99,13 +99,13 @@ jobs:
         with:
           repository: SparkDev97/libSparkAppList
           ref: master
+          path: libSparkAppList
 
       - name: Install libSparkAppList
+        working-directory: libSparkAppList
         run: |
-          mkdir $THEOS/lib
-          cp ./lib/* $THEOS/lib
-          mkdir $THEOS/include
-          cp ./headers/* $THEOS/include
+          cp "./lib/*" "$THEOS/lib"
+          cp "./headers/*" "$THEOS/include"
 
       - name: Build package (rootful)
         run: THEOS=theos gmake clean package FINALPACKAGE=1
