--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,9 +38,6 @@ jobs:
       - name: Set THEOS environment variable
         run: echo "THEOS=$GITHUB_WORKSPACE/theos" >> $GITHUB_ENV
 
-      - name: echo theos
-        run: ls $THEOS
-
       - name: Checkout libSparkAppList
         uses: actions/checkout@main
         with:
@@ -48,16 +45,6 @@ jobs:
           ref: master
           path: libSparkAppList
 
-      - name: echo worksapce
-        run: ls $GITHUB_WORKSPACE
-
-      - name: echo libSparkAppList1
-        run: ls $GITHUB_WORKSPACE/libSparkAppList
-
-      - name: echo libSparkAppList
-        working-directory: libSparkAppList
-        run: ls
-      
       - name: Install libSparkAppList
         working-directory: libSparkAppList
         run: |
@@ -114,8 +101,8 @@ jobs:
       - name: Install libSparkAppList
         working-directory: libSparkAppList
         run: |
-          cp "./lib/*" "$THEOS/lib"
-          cp "./headers/*" "$THEOS/include"
+          cp -r ./lib/. "$THEOS/lib"
+          cp -r ./headers/. "$THEOS/include"
 
       - name: Build package (rootful)
         run: THEOS=theos gmake clean package FINALPACKAGE=1
