removed cephei, sparkAppList -> AltList

--- a/notiflivesprefs/Makefile
+++ b/notiflivesprefs/Makefile
@@ -2,6 +2,14 @@
 
 include $(THEOS)/makefiles/common.mk
 
+ifeq ($(THEOS_PACKAGE_SCHEME),rootless)
+	ARCHS = arm64 arm64e
+	TARGET = iphone:clang:15.5:15.0
+else
+	ARCHS = arm64 arm64e
+	TARGET = iphone:clang:14.2:8.0
+endif
+
 SDKVERSION = 16.5
 
 BUNDLE_NAME = NotifLivesPrefs
@@ -11,7 +19,6 @@ $(BUNDLE_NAME)_FRAMEWORKS = UIKit
 $(BUNDLE_NAME)_PRIVATE_FRAMEWORKS = Preferences
 $(BUNDLE_NAME)_INSTALL_PATH = /Library/PreferenceBundles
 $(BUNDLE_NAME)_CFLAGS = -fobjc-arc
-$(BUNDLE_NAME)_EXTRA_FRAMEWORKS = Cephei CepheiPrefs
-$(BUNDLE_NAME)_LIBRARIES = sparkapplist
+$(BUNDLE_NAME)_EXTRA_FRAMEWORKS = AltList
 
 include $(THEOS_MAKE_PATH)/bundle.mk
