--- a/control
+++ b/control
@@ -6,4 +6,4 @@ Description: Get 1UPs from notifications!
 Maintainer: Wes <wes.hamster@gmail.com>
 Author: Wes <wes.hamster@gmail.com>
 Section: Tweaks
-Depends: mobilesubstrate (>= 0.9.5000), preferenceloader, ws.hbang.common (>= 1.2), net.limneos.libbulletin, com.spark.libsparkapplist
+Depends: mobilesubstrate (>= 0.9.5000), preferenceloader, net.limneos.libbulletin, com.opa334.altlist
