--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,9 +27,11 @@ jobs:
       - name: Checkout SDKs
         uses: actions/checkout@main
         with:
-          repository: xybp888/iOS-SDKs
+          repository: theos/sdks
           ref: master
-          sparse-checkout: iPhoneOS15.5.sdk
+          sparse-checkout: |
+            iPhoneOS15.6.sdk
+            iPhoneOS16.5.sdk
           path: theos/sdks
 
       - name: Install dependencies
@@ -38,18 +40,16 @@ jobs:
       - name: Set THEOS environment variable
         run: echo "THEOS=$GITHUB_WORKSPACE/theos" >> $GITHUB_ENV
 
-      - name: Checkout libSparkAppList
+      - name: Checkout AltList
         uses: actions/checkout@main
         with:
-          repository: SparkDev97/libSparkAppList
-          ref: master
-          path: libSparkAppList
+          repository: opa334/AltList
+          ref: main
+          path: altlist
 
-      - name: Install libSparkAppList
-        working-directory: libSparkAppList
-        run: |
-          cp -r ./lib/. "$THEOS/lib"
-          cp -r ./headers/. "$THEOS/include"
+      - name: Install AltList
+        working-directory: altlist
+        run: make clean && make FINALPACKAGE=1 THEOS_PACKAGE_SCHEME=rootless && mkdir -p "$THEOS/lib/iphone/rootless/lib" && cp -Rv "./.theos/obj/AltList.framework" "$THEOS/lib/iphone/rootless"
 
       - name: Build package (rootless)
         run: THEOS=theos gmake clean package FINALPACKAGE=1 THEOS_PACKAGE_SCHEME=rootless
@@ -91,18 +91,16 @@ jobs:
       - name: Set THEOS environment variable
         run: echo "THEOS=$GITHUB_WORKSPACE/theos" >> $GITHUB_ENV
 
-      - name: Checkout libSparkAppList
+      - name: Checkout AltList
         uses: actions/checkout@main
         with:
-          repository: SparkDev97/libSparkAppList
-          ref: master
-          path: libSparkAppList
+          repository: opa334/AltList
+          ref: main
+          path: altlist
 
-      - name: Install libSparkAppList
-        working-directory: libSparkAppList
-        run: |
-          cp -r ./lib/. "$THEOS/lib"
-          cp -r ./headers/. "$THEOS/include"
+      - name: Install AltList
+        working-directory: altlist
+        run: make clean && make FINALPACKAGE=1 && cp -Rv "./.theos/obj/AltList.framework" "$THEOS/lib"
 
       - name: Build package (rootful)
         run: THEOS=theos gmake clean package FINALPACKAGE=1
